tests/run-pass/semck/seperate-scopes.rs
fn main() {
    let main: int = 0;
    main += 2;

    main();
}