tests/compile-fail/semck/redeclare-fn.rs
fn main() {}
fn main() {}  //! ERROR(2:1): cannot redeclare `main`